[package]
name = "compile_warning"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A proc macro that emits a compile-time warning"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
proc_macro = true
name = "compile_warning"
path = "lib.rs"
